<resources>
    <string name="app_name">KotShare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">KotShare</string>
    <string name="nav_header_subtitle">info@kotshare.be</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Réglages</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_likes">Mes favoris</string>
    <string name="menu_my_student_rooms">Mes kots</string>
    <string name="menu_logout">Déconnexion</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="student_room_single">Détails</string>

    <string name="place">Lieu</string>
    <string name="monthlyPrice">Prix</string>
    <string name="between">Entre</string>
    <string name="et">et</string>
    <string name="periodeDeDisponibilites">Période de disponibilité</string>
    <string name="any">peu importe</string>
    <string name="title_activity_login">Log In</string>
    <string name="search">Rechercher</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Adresse e-mail ou mot de passe incorrect.</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Mot de passe</string>
    <string name="price_format">%1$s € / mois</string>

    <!-- Caractéristiques -->

    <string name="shared_bathroom">Salle de bain partagée</string>
    <string name="shared_kitchen">Cuisine partagée</string>
    <string name="accessible_garden">Jardin accessible</string>
    <string name="roommates_number">%1$d colocataire(s)</string>
    <string name="included_wifi">Wifi inclus</string>

    <string name="private_bathroom">Salle de bain privée</string>
    <string name="private_kitchen">Cuisine privée</string>
    <string name="no_garden">Pas de jardin</string>
    <string name="not_included_wifi">Wifi non-inclus</string>

    <!-- ERROR MESSAGES -->
    <string name="error_password_length">Le mot de passe doit contenir au moins %1$d caractère(s).</string>
    <string name="error_password_uppercase_letter">Le mot de passe doit contenir au moins %1$d majuscule(s).</string>
    <string name="error_password_lowercase_letter">Le mot de passe doit contenir au moins %1$d minuscule(s).</string>
    <string name="error_password_digits">Le mot de passe doit contenir au moins %1$d chiffres(s).</string>

    <string name="error_email_format">L\'email entré n\'a pas un format valide.</string>

    <string name="PREFERENCES_FILE">preferences</string>
    <string name="USER_CREDENTIALS_EXPIRING_TIME">user_expiring_time</string>
    <string name="DEFAULT_DATE_FORMAT">dd-M-yyyy hh:mm:ss a</string>
    <string name="log_in">Se connecter</string>
    <string name="USER_ID">userId</string>
    <string name="STUDENT_ROOM_ID">student_room_id</string>
    <string name="USER_TOKEN">user_token</string>
    <string name="characteristics">Caractéristiques</string>
    <string name="description">Description</string>
    <string name="no_description">Aucune description</string>
    <string name="localisation">Situation</string>
    <string name="error_date_format">Le format de date entré est invalide</string>
    <string name="create_account">Créer un compte</string>
    <string name="signup">Créer un compte</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstname">Prénom</string>
    <string name="name">Nom</string>
    <string name="password_confirmation">Confirmation de mot de passe</string>
    <string name="phone">Téléphone</string>
    <string name="error_password_confirmation">Les mots de passe ne correspondent pas</string>
    <string name="errors_title">Formulaire invalide</string>
    <string name="no_school_selected">Veuillez sélectionner une école</string>
    <string name="error_phone_number_format">Format de téléphone entré invalide.</string>
    <string name="error_first_name">Veuillez entrer un prénom.</string>
    <string name="error_last_name">Veuillez entrer un nom.</string>
    <string name="error_network">Erreur réseau</string>
    <string name="error_connection">La connexion a été perdue.</string>
    <string name="error_request">Erreur de requête</string>
    <string name="error_request_client">Une erreur est survenue en raison des informations envoyées.</string>
    <string name="success">Succès</string>
    <string name="success_account_creating">Votre compte a été créé avec succès. Vous pouvez désormais vous connecter.</string>
    <string name="error_unknown">Erreur inconnue</string>
    <string name="error_unknown_happened">Une erreur d\'origine inconnue est survenue</string>
    <string name="select_school">Sélectionnez une école</string>
    <string name="all_cities">Toutes les villes</string>
    <string name="date_min">Date minimale</string>
    <string name="date_max">Date maximale</string>
    <string name="email_already_exists">L\'email entré existe déjà.</string>
    <string name="no_vote">Aucune note</string>
    <string name="add_student_room">Ajouter un kot</string>
    <string name="edit_student_room">Modifier un kot</string>
    <string name="student_room_name">Nom</string>
    <string name="number_of_roommates">Nombre de colocataires</string>
    <string name="photo">Photos</string>
    <string name="select_photos">Sélectionner des photo</string>
    <string name="delete_student_room">Supprimer ce kot</string>
    <string name="error_invalid_price">Prix entré invalide</string>
    <string name="error_student_room_name">Le nom de l\'annonce doit faire au moins %1$d caractère(s)</string>
    <string name="error_roommates_number">Nombre de colocataires invalide.</string>
    <string name="street">Rue</string>
    <string name="street_number">Numéro</string>
    <string name="success_student_room_added">Le kot a été ajouté avec succès.</string>
    <string name="error_street_required">La rue est requise</string>
    <string name="error_street_number_required">Le numéro de rue est requis.</string>
    <string name="select_city">Sélectionnez une ville</string>
    <string name="error_select_city">Veuillez sélectionner une ville.</string>
    <string name="success_student_room_updated">Le kot a été mis à jour avec succès</string>

</resources>
