<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_likes"
            android:icon="@drawable/ic_favorite_filled_24dp"
            android:title="@string/menu_likes" />
        <item
            android:id="@+id/nav_my_student_rooms"
            android:icon="@drawable/ic_airline_seat_individual_suite_black_24dp"
            android:title="@string/menu_my_student_rooms" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_close_black_24dp"
            android:title="@string/menu_logout" />
    </group>

</menu>
