<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.kotshare.view.nav.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_likes"
        android:name="com.example.kotshare.view.nav.likes.LikesFragment"
        android:label="@string/menu_likes"
        tools:layout="@layout/fragment_likes" />

    <fragment
        android:id="@+id/nav_my_student_rooms"
        android:name="com.example.kotshare.view.nav.my_student_rooms.MyStudentRoomsFragment"
        android:label="@string/menu_my_student_rooms"
        tools:layout="@layout/fragment_my_student_rooms" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.kotshare.view.nav.log_out.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@null" />
</navigation>